--- a/assets/style.css
+++ b/assets/style.css
@@ -1,28 +1,27 @@
 /*
-    UpennLPS HW1 css document for recommended assignment
+    UpennLPS HW2 Bootstrap css document for 
     Author: Kevin Wang
-    Date Due: 2019/01/26
+    Date Due: 2019/02/02
+    No media queries were used.
 */
 
+
 header{
-    background-color: #ffffff;
-    border-color: #cccccc;
-    border-bottom-style:solid;
-    font-family: 'Georgia', Times, Times New Roman, serif;  
-    height:120px;
-    width: 100%; 
-    position: fixed;
-    top:0%;
-    left: 0%;
-    z-index: 2;
+
 }
 
 
 .topBar{
-    margin: auto;
-    position: relative;
-    width: 960px;
-    height:120px;
+    background-color: #ffffff;
+    border-color: #cccccc;
+    border-bottom-style:solid;
+    font-family: 'Georgia', Times, Times New Roman, serif;  
+    height:auto;
+    position: static;
+    top:0%;
+    left: 0%;
+    z-index: 2;
+
 }
 
 .nameBox{
@@ -30,30 +29,17 @@ header{
     background-color: #4aaaa5;
     padding:10px 20px 0px 20px;
     margin:0;
-    position: absolute;
-    bottom:0%;
-    left:0%;
+    width:100%;
+    text-align: center;
+    height:100%;
 }
 
-.navHeader{
-    color: #ffffff;
-    background-color: #4aaaa5;
-    text-align: center;
-    margin:auto;
-    padding-top:10px;
-    height:100%;
-    position: relative;
-    top:-10px;
-    width:960px;
-  
-}
 
 .tabs{
-    position: absolute;
-    bottom: 30%;
-    right:0%;
+
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     text-decoration: none;
+    
 }
 
 #noUL{
@@ -83,17 +69,17 @@ body{
 }
 
 .mainContentBox{
+    margin-top: 30px;
+    margin-bottom: 30px;
     width:960px;
-    margin:auto;
-    margin-top: 150px;
-    height:auto;
     background-color: #ffffff;
     border-style:solid;
     border-color: #dddddd;
+    padding-bottom: 30px;
+
 }
 
 .mainContent{
-    padding: 10px 30px 30px 30px;
     text-align: justify;
     line-height:2;
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -102,13 +88,15 @@ body{
 .pageTitle{
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    margin-top: 20px;
 }
 
 #indexPic{
-    height:270px;
-    width:200px;
+    height:auto;
+    width:100%;
+    max-width: 300px;
     float:left;
-    margin: 20px 30px 0px 0px;
+    margin: 10px 30px 0px 0px;
 }
 
 .inputBox1{
@@ -124,31 +112,32 @@ height:400px;
     margin-top: 30px;
 }
 
-.container{
-    height: 288px;
-    width: 384px;
-    margin: 30px;
-    position: relative;
-    display: inline-block;
+.imgcontainer{
+    width:100%;
 }
 
+
 .portfolioImages{
-    height:100%;
-    width:100%;
-    position:absolute;
     z-index:0;
+    width:100%;
+    height:auto;
+    position: relative;
+    display:block;
+
 }
 
 .portfolioTitle{
     color:#ffffff;
     background-color:#4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    height:50px;
     width:100%;
-    padding: 30px 0 30px 0;
-    position: absolute;
-    bottom: 20px;
+    position: relative;;
+    bottom:100px;
     z-index:1;
     text-align: center;
+    display:block;
+    margin:auto;
 }
 
 .footer{
@@ -160,6 +149,26 @@ height:400px;
     position:fixed;
     left:0%;
     bottom:0%;
-    height:100px;
+    height:40px;
     z-index:2;
 }
+
+.container{
+
+    
+}
+
+.navbar{
+
+}
+
+.navbar-brand{
+    color:#ffffff;
+    background-color: #4aaaa5;
+    float:none;
+    text-align:center;
+    width:100%;
+    font-size: 24px;
+}
+
+
