--- a/assets/style.css
+++ b/assets/style.css
@@ -120,7 +120,7 @@ height:400px;
 .portfolioImages{
     z-index:0;
     width:100%;
-    height:auto;
+    height:384px;;
     position: relative;
     display:block;
 
